# Lodestone

./: .gitignore  LICENSE  README.md  codespaces.sh  config.json  config.json.example  gui.py  logo_model.bbmodel  main.py  pyproject.toml  requirements.txt  start.bat  style.css  test.py  test_plugins.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  static.yml
assets/: logo_model.bbmodel
assets/items/: upscale.py
documentation/: index.html
documentation/css/: 0191ecb81d6710ae.css
documentation/js/: 673-ec1ccb4c07296023.js  _app-2e12d6db7cddd648.js  _buildManifest.js  framework-7a7e500878b44665.js  index-882fc00e379b9e3f.js  main-bb4ddb42bdb20981.js  polyfills-78c92fac7aa8fdd8.js  webpack-38cee4c0e358b1a3.js
examples/: 2b2t.py  ansi.js  ansi.py  anvil.py  armor_stand.py  attack.py  auto_totem.py  bee.py  block_entity.py  blockfinder.py  book.py  chat_parsing.py  chatterbox.py  chest.py  collectblock.py  command_block.py  digger.py  discord.py  echo.py  events.py  graffiti.py  guard.py  inventory.py  jumper.py  looker.py  moving.py  multiple_from_file.py  perfectShotBow.py  plugin.py  quitter.py  reconnector.py  resourcepack.py  scoreboard.py  skin_blinker.py  skin_data.py  sleeper.py  telegram.py  trader.py
examples/anvil_saver/: saver.js
examples/cli/: readline.js
examples/plugins/: afk.js  discord_rpc.py  plugin_template.py
examples/schematics/: 19996.schem  235.schematic  car.schematic  idk.nbt  lodestone.nbt  lodestone.schem  simple-house-2.schem
examples/screenshot-with-node-canvas-webgl/: screenshot.js
examples/viewer/: viewer.js
lodestone/: __init__.py  __main__.py  api-test.py  api.py  apimodel.py  bot.py  console.py  discordbot.py  exceptions.py  gradios.py  logger.py  og-networknetDatabase.json  plugin.py  plugin_template.py  plugins.py  server.py  sockets.py  tasks.py  test-console.py  types.py  utils.py
lodestone/data/: facingData.json
lodestone/modules/: __init__.py  api.py  exceptions.py  logger.py  (+1 more)
lodestone_compass/: __init__.py
mineflayer/: __init__.py  __main__.py  api.py  bot.py  discordbot.py  mineflayer.py  og-networknetDatabase.json  test-console.py  test.py  utils.py
opendeliverybot/: __init__.py  __main__.py  api.py  bot.py  bot.py.old  bot_test.py  config.json  console.py  console_ui.py  discordbot.py  start.bat  test-console.py  utils.py  web.py  web_ui.py
opendeliverybot copy/: start.bat
opendeliverybotweb/: __init__.py
plugins/: discord_bot.py
plugins copy/: cactus_farm_builder.py
tests/: versions.py
(+19 files in other folders)
