[project]
name = "lodestone"
version = "0.0.8"
description = "🤖 Create Minecraft bots with a powerful, stable, and high level Python API."
authors = [
    { name = "Silke pilon", email = "silkepilon2009@gmail.com" },
    { name = "HellishBro", email = "hellishbro@outlook.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/SilkePilon/Lodestone"
Repository = "https://github.com/SilkePilon/Lodestone"
Documentation = "https://github.com/SilkePilon/Lodestone/blob/main/README.md"
