[project]
name = "lodestone"
version = "0.0.16"
description = "🤖 Create Minecraft bots with a powerful, stable, and high level Python API."
authors = [
    { name = "Silke pilon", email = "silkepilon2009@gmail.com" },
    { name = "HellishBro", email = "hellishbro@outlook.com" },
    { name = "Levy", email = "Levy@example.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "javascript",
    "click",
    "rich",
    "fastapi",
    "structlog",
    "uvicorn",
    "tinydb",
    "fuzzyfinder",
    "g4f",
    "requests",
    "py-cord",
    "aiohttp",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/SilkePilon/Lodestone"
Repository = "https://github.com/SilkePilon/Lodestone"
Documentation = "https://github.com/SilkePilon/Lodestone/blob/main/README.md"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

